assets/css/pages/single.css
.jpt-post {
  display: flex;
  flex-direction: column;
  gap: 3rem;
  width: 100%;
}

.jpt-post h1 {
  font-size: 2.4rem;
  margin-bottom: 0.5rem;
}

.jpt-post img {
  border: solid 1px var(--jpt-colour-muted);
  border-radius: 8px;
  box-shadow: 0 2px 6px rgba(59, 82, 164, 0.1);
}

.jpt-post-hero {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.jpt-project-back-home-link {
  width: fit-content;
  cursor: pointer;
}

.jpt-project-thumb-desktop {
  display: none;
}

.jpt-project-thumb-mobile,
.jpt-project-thumb-desktop {
  width: 100%;
  height: auto;
}

.jpt-project-info {
  display: flex;
  flex-direction: column;
  align-content: baseline;
  gap: 2rem;
}

.jpt-project-info-block h3 {
  margin-bottom: 0.5rem;
}

.jpt-project-info-block a {
  font-size: 1.15rem;
  white-space: nowrap;
}

.jpt-project-info-block {
  width: fit-content;
}

.jpt-project-tech {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  column-gap: 0.6rem;
}

.jpt-project-content hr {
  margin: 3rem 0;
}

.jpt-project-content h2 {
  margin-bottom: 1.75rem;
}

.jpt-project-content h3 {
  margin-bottom: 0.65rem;
  margin-top: 2.15rem;
}

.jpt-project-content p,
.jpt-project-content ul,
.jpt-project-content ol {
  margin-bottom: 1rem;
}

.jpt-project-content li {
  margin-bottom: 0.5rem;
}

.jpt-project-content li:last-child {
  margin-bottom: 0;
}

.jpt-project-content ul {
  list-style: disc;
}

.jpt-project-content ol {
  list-style: decimal;
}

.jpt-project-content ul,
.jpt-project-content ol {
  padding-left: 2rem;
}

.jpt-project-content a {
  font-size: 1.15rem;
}

.jpt-project-content a {
  transition: opacity 175ms ease;

  &:hover {
    background-size: 0;
    opacity: 0.7;
  }

  &:active {
    opacity: 0.5;
  }
}

.jpt-project-content .wp-caption {
  max-width: fit-content;
  margin-bottom: 2rem;
}

.jpt-project-content .wp-caption img {
  height: fit-content;
}

.jpt-project-content .wp-caption-text {
  margin-top: 1rem;
  text-align: center;
}

@media (min-width: 800px) {
  .jpt-project-thumb-desktop {
    display: block;
  }

  .jpt-project-thumb-mobile {
    display: none;
  }

  .jpt-project-info {
    gap: 3.5rem;
    flex-direction: row;
  }
}

